...
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>
    <string name="edit_option">edit…</string>

    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>

    <string name="discard">Discard</string>

    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name= "assistant">Assistant</string>

    <string name="yes">Yes</string>
...
    <string name="error">Error</string>

    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait</string>
    <string name="search_hint">Search</string>

    <string name="backpack_add">Add to backpack</string>

    <string name="share_website_text">share.catrob.at</string>

    <!-- Security warning dialog -->
    <string name="security_warning_dialog_msg">The project you have downloaded listens to your voice
        in the background and also sends data to the internet. This may be harmless, and necessary
...
    <string name="am_merge">Merge</string>
    <string name="dialog_confirm_delete">You can\'t undo this!</string>

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
...
        on connected multiplayer devices</string>


    <!-- Backpack -->
    <string name="backpack_title">Your backpack</string>
    <string name="pack">Pack</string>
    <string name="unpack">Unpack</string>
    <!--  -->

    <!-- NewProjectDialog -->
    <string name="new_project_dialog_example_project">Example project</string>
    <!--  -->

...
    <!-- Device bricks -->
    <string name="brick_reset_timer">Reset timer</string>
    <string name="brick_open">Open</string>
    <string name="brick_in_browser">in browser</string>

    <!-- Control bricks -->
    <string name="brick_when_started">When scene starts</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_when_condition_when">When</string>
    <string name="brick_when_becomes_true">becomes true</string>
    <string name="brick_wait">Wait</string>
    <string name="brick_wait_until">Wait until</string>
    <string name="brick_wait_until_second_part">is true</string>
...
